# agent-lab-python

./: README.md  pyproject.toml
.github/: copilot-instructions.md
app/static/css/: app.css
app/templates/: base.html
app/templates/components/: bingo_board.html  bingo_modal.html  game_screen.html  start_screen.html
tests/: test_api.py
